--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Anima 01</title>
-<script src="js/sprite.js"></script>
+<script src="js/game.js"></script>
 <script src="js/script.js"></script>
 </head>
 <body>
