--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Anima 01</title>
+<script src="js/joystick.js"></script>
 <script src="js/player.js"></script>
 <script src="js/script.js"></script>
 </head>
